# video2product

./: .gitignore  CLAUDE.md  PROJECT.md  pyproject.toml
src/video_to_product/: app.py  download.py  summarize.py  transcribe.py
src/video_to_product/templates/: index.html
