[project]
name = "video-to-product"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "yt-dlp>=2024.12",
    "openai>=1.60",
    "anthropic>=0.43",
    "pydub>=0.25",
]

[tool.ruff]
line-length = 100
